# PythonProject4

./: .env.sample  coverage.txt  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_video_url.py  0003_course_owner_lesson_owner.py  0004_alter_course_owner_alter_lesson_course_and_more.py  0005_subscription.py  0006_course_prise.py  0007_rename_prise_course_price.py
users/: models.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: add_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id_alter_payment_user.py
